# Odin.app

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
BuildScripts/: get-version.sh  tal-m4.mk
Headers/: Makefile.am
Headers/Odin/: Errors.h  IAllocator.h  IArray.h  IConsole.h  IDictionary.h  IFactory.h  IKernel.h  IMemoryManager.h  IMutableKernel.h  IMutableTask.h  IMutableThread.h  IObject.h  IRegion.h  IString.h  ISupports.h  ITask.h  IThread.h  IVariant.h  Interfaces.h  Makefile.am  _decl.h
IDL/: Errors.idl  IConsole.idl  IFactory.idl  IKernel.idl  IMemoryManager.idl  IMutableTask.idl  IObject.idl  ISupports.idl  ITask.idl  IThread.idl  IVariant.idl  Makefile.am
IDL/Odin/: IAllocator.idl  IArray.idl  IDictionary.idl  IKernel.idl  IMutableKernel.idl  IMutableTask.idl  IMutableThread.idl  IRegion.idl  IString.idl  IThread.idl  Interfaces.idl  Makefile.am
M4/: tal-m4.m4  tal-system.m4
Sources/: .gitignore  Makefile.am  Odin  alloc.c  console.c  main.c  mm.c  namespace.c  odin.c  p_Odin.h  subsystems.c  task.c  thread.c
Sources/Devices/: Makefile.am  hostcon.c
Sources/Filesystems/: Makefile.am
Sources/Interpreters/: Makefile.am
Sources/MM/: Makefile.am  hostalloc.c  hostmm.c
