## Odin: The Talisker nanokernel

## Copyright 2017 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

dist_noinst_DATA = Interfaces.idl Errors.idl \
	IObject.idl IFactory.idl ISupports.idl \
	ITask.idl IMutableTask.idl \
	IThread.idl IMutableThread.idl \
	IVariant.idl IArray.idl IDictionary.idl IString.idl \
	IKernel.idl IMutableKernel.idl \
	IAllocator.idl \
	IMemoryManager.idl \
	IConsole.idl
